# dynamic-tool-discovery

./: .gitattributes  .gitignore  Untitled.ipynb  data_collection.ipynb  experiment.ipynb  prepare_test_set.ipynb  update_schemas.ipynb  visualization.ipynb
data/: results_analysis.ipynb  wrong-params-counted-correct.ipynb
data/results/cosine_similarity_only_test-3/: results
execution/: 75-50-tools-comparison.py  main.py
full-scripts/: 75-50-tools-comparison.py  main.py  pyproject.toml
notebooks/: data_collection.ipynb  naive_llm_invocation_analysis.ipynb  visualization.ipynb
training/: rag_tool_choice.ipynb  rag_tool_choice.py
