[project]
name = "full-scripts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.0",
    "openai>=2.21.0",
    "pandas>=3.0.1",
    "pydantic>=2.0",
    "scikit-learn>=1.8.0",
    "tiktoken>=0.7",
    "tqdm>=4.0",
]
